2010-08-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Guard against a potential buffer overrun.

	* src/pkgreqs.cpp (pkgSpecs::SetProperty): Allocate an additional
	byte to accommodate an extra field separator, when inserting a new
	data value into a previously empty field.

2010-07-27  Cesar Strauss  <cestrauss@gmail.com>

	Handle the GNU long name tar header format.

	* src/pkgproc.h (TAR_ENTITY_TYPE_GNU_LONGNAME): New manifest constant;
	define it.
	(pkgTarArchiveProcessor::EntityDataAsString): New protected method;
	declare and...
	* src/tarproc.cpp: ...implement it.
	(pkgTarArchiveProcessor::Process): Before building the entry pathname,
	check for a GNU long name type header; when found, read pathname from
	the entry data area, before fetching the following header, from which
	to retrieve the associated entity data.

2010-06-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around an autoconf bug (reported by Stefano Sabatini).

	* Makefile.in (VPATH): Use @top_srcdir@ instead of ${srcdir}; current
	autoconf incorrectly elides references to @srcdir@ and ${srcdir} when
	substituting within a VPATH specification for building `in-source'.
	Also, prefer colons to blanks as path name separators, for improved
	portability to non-GNU implementations of make; (recommendation by
	Ralf Wildenhues).

2010-06-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Include alias search, when matching component package name.

	* src/keyword.c (has_keyword): Rearrange argument declarations for
	more natural order; update all callers accordingly.  Simplify; compare
	keyword to be matched with each successive candidate from match-list,
	character-by-character and in-place, so avoiding memory allocation
	for any local duplicate of the passed match-list; thus...
	(safe_strdup): ...this static function no longer required; delete it.
	(string.h): No references remain; do not include it.
